--- a/.theme/plugins/hider-plugin.css
+++ b/.theme/plugins/hider-plugin.css
@@ -45,13 +45,32 @@ HIDER PLUGIN v1.0.5
 }
 
 /* fullscreen mode on macOS */
-.is-fullscreen .workspace-split.mod-left-split .workspace-tab-header-container {
+body.is-fullscreen .workspace-split.mod-left-split .workspace-tab-header-container {
   padding-left: 0;
 }
 
 /* Force-hide titlebar regardless of settings
 This is required to make settings modal present like in Discord */
 body:not(.hider-frameless):not(.discordian-writer):not(.discordian-theme) .modal-container {
+  top: 0 !important;
+  height: 100vh !important;
+}
+
+/*body.discordian-theme:not(.discordian-hide-titlebar):not(.is-fullscreen) .modal-container {
+  top: -22px !important;
+  height: 100vh !important;
+}*/
+
+
+body.discordian-theme.hider-frameless .modal-container,
+body.discordian-theme.discordian-hide-titlebar .modal-container {
+  top: 0 !important;
+  height: 100vh !important;
+}
+
+body.discordian-theme .modal-container {
   top: -22px !important;
   height: 100vh !important;
 }
+
+
